<resources>
    <string name="app_name">AppTrade</string>
    <string name="app_commercial_name">YesWeTrade</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_trade">Trade</string>
    <string name="title_wallet">Wallet\n</string>
    <string name="title_account">Account</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="birthdate">Birthdate</string>
    <string name="sex">Gendre</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zipCode">Zip code</string>

    <string name="cash_available">Cash available</string>
    <string name="money">Money</string>
    <string name="euro">Euro</string>
    <string name="wallet">Wallet</string>

    <string name="loading_data">Loading data</string>
    <string name="crypto_icon_description">icon</string>
    <string name="trade">Trade</string>
    <string name="favorites">Favorites</string>
    <string name="all_crypto">All crypto</string>
    <string name="transaction">Transaction</string>
    <string name="lib_prix_transaction">Price of %s</string>
    <string name="lib_nb_wallet">%s %s = $ %s</string>
    <string name="symb_euro">$ %s</string>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="accountTitle">Hello %s !</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>
    <string name="depositTitle">Deposit :</string>
    <string name="withdrawTitle">Withdraw :</string>
    <string name="withdraw">Withdraw</string>
    <string name="total_balance">Total balance</string>

</resources>