<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.cnam.apptrade.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="fr.cnam.apptrade.ui.home.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="fr.cnam.apptrade.ui.home.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />

</navigation>