<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_trade">

    <fragment
        android:id="@+id/navigation_trade"
        android:name="fr.cnam.apptrade.ui.trade.TradeFragment"
        android:label="@string/title_trade"
        tools:layout="@layout/fragment_trade" >
        <action
            android:id="@+id/action_navigation_trade_to_navigation_transaction"
            app:destination="@id/navigation_transaction" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="fr.cnam.apptrade.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="fr.cnam.apptrade.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="fr.cnam.apptrade.ui.transaction.TransactionFragment"
        android:label="Transaction"
        tools:layout="@layout/fragment_transaction" />

</navigation>